added support for redis

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ SYSTEM_URL="http://localhost:8000"
 SYSTEM_KEY="Ohs8yevaquaiquiMo5quoloh3Aeboh2gai5ungu8aiF8shoh7y"
 SERVER_HTTP_ADDR=":8000"
 
+DB_ENABLE=false
 DB_DRIVER=postgres
 DB_NEED_SCHEME=true
 DB_HOST="localhost:26257"
@@ -10,3 +11,8 @@ DB_DATABASE=crms
 DB_USERNAME=root
 DB_PASSWORD=root
 DB_OPTIONS="charset=utf8&sslmode=disable"
+
+REDIS_ENABLE=false
+REDIS_HOST="localhost:6379"
+REDIS_PASSWORD=
+REDIS_DB=
